# CurvesWB

./: .gitignore  BSplineAlgorithms.py  BSplineApproxInterp.py  Birail.py  BlendCurve.py  CoinNodes.py  Discretize.py  ExtractShapes.py  FC_interaction_example.py  Flatten.py  GeomInfo.py  HQRuledSurfaceFP.py  HUD.py  HelicalSweepFP.py  InitGui.py  IsoCurve.py  IsoCurve2.py  JoinCurves.py  MANIFEST.in  OrientedSketchFP.py  Outline_FP.py  ParametricBlendCurve.py  ParametricComb.py  PlateSurface.py  ProfileSketch.py  README.md  ReflectLinesFP.py  Sketch_On_Surface.py  SurfaceEdit.py  Sw2R.py  Sweep2Rails.py  TemplateFP.py  TrimFace.py  ZebraTool.py  _utils.py  adjacent_faces.py  approximate.py  approximate_extension.py  bezierCurve-2.py  bezierCurve-selection.py  (+51 more)
.github/workflows/: test.yml
LICENSES/: Apache-2.0.txt
TestFiles/: Gordon-2.fcstd  Sketch_on_surface.fcstd  TiGL-tests.fcstd  pipeshell-test.fcstd  test-BlendSurface.fcstd  test-BlendSurface.fcstd1  test-S2R.fcstd  test-birail-2.fcstd  test-birail-2.fcstd1  test-birail.fcstd  test-birail.fcstd1  test-flatten.fcstd
freecad/Curves/: BSplineAlgorithms.py  BSplineApproxInterp.py  Bend_Extend_FP.py  Birail.py  CoinNodes.py  CurveEdit.py  CutExtendFP.py  Discretize.py  DraftAnalysisFP.py  ExtractShapes.py  FC_interaction_example.py  FaceMapFP.py  Flatten.py  FlattenFP.py  GeomInfo.py  HQRuledSurfaceFP.py  HUD.py  HelicalSweepFP.py  IsoCurve.py  IsoCurve2.py  JoinCurves.py  MapOnFaceFP.py  OrientedSketchFP.py  Outline_FP.py  ParametricBlendCurve.py  ParametricComb.py  PlateSurface.py  PointInterpolate.py  (+106 more)
(+48 files in other folders)
